# atelier-medusa

./: README.md  main.py  pyproject.toml
MCF-2-Flash/: CLAUDE.md  main_config.yaml  mcf_2f_shell.py  sb_example.py  setup.py
MCF-2-Flash/MCF2Flash/: README.md  app_config.py  celery_core.py  debug_notebook.py  fastapi_depends.py  launch.md  loguru_setup.py  mcf_2f_core.py  mcf_2f_shell.py  request_client.py  rest_core.py  selenium_core.py
MCF-2-Flash/MCF2Flash/DDL/: task_list.sql
MCF-2-Flash/MCF2Flash/celery_misc/: mcf_v2_tasks.py  tasks.py
MCF-2-Flash/MCF2Flash/commons/: file_io.py  net_io.py  udao.py  v2_abstract_extension.py
MCF-2-Flash/MCF2Flash/controllers/: mcf_v2_view.py  test_view.py  testing.py
MCF-2-Flash/MCF2Flash/domains/: defined_domains.py
MCF-2-Flash/MCF2Flash/entities/: defined_entities.py
MCF-2-Flash/MCF2Flash/mcf_2f/: cmd_parser.py  extension_mgr.py  mcf_2f_core.py  selenium_core.py
MCF-2-Flash/MCF2Flash/mcf_2f_cores/: selenium_core.py
MCF-2-Flash/MCF2Flash/repository/: defined_repositories.py
MCF-2-Flash/configs/: main_config.yaml  win_main_config.yaml
MCF-2-Flash/configs_example/: main_config.yaml  win_main_config.yaml
MiscToolsAndSolutions/: MariaDB 家用备份与还原方案（基于 mariabackup + xbstream + pigz）.md
basic_tools/: test.py  test1.py
dev_notes/: xvfb+novnc运行程序
nb/: 8BFTResourceTest.ipynb
notebooks/: 4Binstruct.py  8BFTResourceTest.ipynb  Qwen3_(14B)-Reasoning-Conversational.ipynb  Qwen3_(14B)-Reasoning-Conversational_Full14B.ipynb
