[project]
name = "atelier-medusa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hdbscan>=0.8.40",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=0.34.3",
    "jieba>=0.42.1",
    "matplotlib>=3.10.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.47.1",
    "umap-learn>=0.5.9.post2",
]
