[project]
name = "atelier-medusa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celery>=5.5.3",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "hiredis>=3.2.1",
    "ipython>=8.37.0",
    "jieba>=0.42.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.5",
    "mouseinfo>=0.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "polars>=1.32.3",
    "psutil>=7.1.3",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pymongo>=4.14.1",
    "pymsgbox>=1.0.9",
    "pymysql>=1.1.1",
    "pyperclip>=1.9.0",
    "pyrect>=0.2.0",
    "pytweening>=1.2.0",
    "pyvirtualdisplay>=3.0 ; sys_platform == 'linux'",
    "redis>=6.4.0",
    "requests>=2.32.4",
    "seleniumbase>=4.41.1",
    "sqlalchemy>=2.0.43",
    "stevedore>=5.4.1",
    "streamlit>=1.47.1",
    "umap-learn>=0.5.9.post2",
    "uvicorn>=0.35.0",
    "wheel>=0.45.1",
    "xvfbwrapper>=0.2.13 ; sys_platform == 'linux'",
]

[[tool.uv.index]]
url="https://mirrors.aliyun.com/pypi/simple"
default=true
